# linkml-model

./: .gitignore  .npmrc  .pre-commit-config.yaml  .yamllint-config  .zenodo.json  404.html  CITATION.cff  CONTRIBUTING.md  ChangeLog  MAINTAINERS.md  Makefile  Migration.md  PipenvPipfile  Pipfile  README.md  about.yaml  build.gradle  checkout_outputs.sh  environment.sh  foo.sh  gen_project_config.yaml  hide_test_changes.sh  latest  mkdocs.yml  package.json  project.Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  settings.gradle  setup.cfg  setup.py  show_test_changes.sh  targets.sh  tox.ini  versions.json
.github/: dependabot.yml  release.yml
.github/workflows/: build-publish-documentation.yaml  codespell.yml  dev.yaml  linkml-compat.yaml  main.yaml  pr-test.yaml  publish.yaml  pypi-publish.yaml  release.yaml  schema.yaml  validate-yaml-syntax.yaml
1.10.x/: sitemap.xml
1.10.x/linkml_model/: datasets.py  mappings.py  types.py
1.10.x/search/: search_index.json
1.11.x/: 404.html  index.html  sitemap.xml
1.11.x/docs/: index.html
1.11.x/javascripts/: tablesort.js
1.11.x/linkml_model/: annotations.py  datasets.py  meta.py
1.11.x/search/: search_index.json
1.7.x/: sitemap.xml
1.7.x/search/: search_index.json
1.8.x/: index.html  sitemap.xml
1.8.x/search/: search_index.json
dev/: 404.html  index.html  sitemap.xml
dev/docs/: index.html
dev/linkml_model/: extensions.py  index.html  linkml_files.py  meta.py  validation.py
dev/search/: search_index.json
docs/: 404.html  AltDescription.html  Annotatable.html  Annotation.html  Boolean.html  ClassDefinition.html  CommonMetadata.html  Date.html  Datetime.html  Decimal.html  Definition.html  Double.html  Element.html  EnumDefinition.html  Example.html  Extensible.html  Extension.html  Float.html  Integer.html  LocalName.html  Ncname.html  Nodeidentifier.html  Objectidentifier.html  PermissibleValue.html  Prefix.html  README.txt  SchemaDefinition.html  SlotDefinition.html  String.html  SubsetDefinition.html  Time.html  TypeDefinition.html  UniqueKey.html  Uri.html  Uriorcurie.html  abstract.html  alias.html  aliases.html  alt_description_source.html  alt_description_text.html  (+127 more)
docs/00preamble/: index.html
docs/01introduction/: index.html
docs/02instances/: index.html
docs/03schemas/: index.html
docs/04derived-schemas/: index.html
docs/05validation/: index.html
docs/06mapping/: index.html
docs/AliasPredicateEnum/: index.html
docs/AltDescription/: index.html
docs/Annotatable/: index.html
docs/Annotation/: index.html
docs/AnonymousClassExpression/: index.html
docs/AnonymousEnumExpression/: index.html
docs/AnonymousExpression/: index.html
docs/AnonymousSlotExpression/: index.html
docs/AnonymousTypeExpression/: index.html
docs/Basic/: index.html
docs/BasicSubset/: index.html
docs/Boolean/: index.html
docs/ClassDefinition/: index.html
docs/ClassExpression/: index.html
docs/ClassLevelRule/: index.html
docs/ClassRule/: index.html
docs/ClassificationRule/: index.html
docs/CommonMetadata/: index.html
docs/Date/: index.html
docs/DateOrDatetime/: index.html
docs/Datetime/: index.html
docs/Decimal/: index.html
docs/Definition/: index.html
docs/Double/: index.html
docs/Element/: index.html
docs/EnumDefinition/: index.html
docs/EnumExpression/: index.html
docs/Example/: index.html
docs/Expression/: index.html
docs/Extensible/: index.html
docs/Extension/: index.html
docs/Float/: index.html
docs/ImportExpression/: index.html
docs/Integer/: index.html
docs/LocalName/: index.html
docs/MatchQuery/: index.html
docs/Minimal/: index.html
docs/MinimalSubset/: index.html
docs/Ncname/: index.html
docs/Nodeidentifier/: index.html
docs/ObjectOriented/: index.html
docs/ObjectOrientedProfile/: index.html
docs/Objectidentifier/: index.html
docs/Owl/: index.html
docs/OwlProfile/: index.html
docs/PathExpression/: index.html
docs/PatternExpression/: index.html
docs/PermissibleValue/: index.html
docs/Prefix/: index.html
docs/PresenceEnum/: index.html
docs/PvFormulaOptions/: index.html
docs/ReachabilityQuery/: index.html
docs/RelationalModel/: index.html
docs/RelationalModelProfile/: index.html
docs/RelationalRoleEnum/: index.html
docs/SchemaDefinition/: index.html
docs/Setting/: index.html
docs/SlotDefinition/: index.html
docs/SlotExpression/: index.html
docs/SpecificationSubset/: index.html
docs/String/: index.html
docs/StructuredAlias/: index.html
docs/SubsetDefinition/: index.html
docs/Time/: index.html
examples/: command-example.yaml  date-example.yaml  dynamic-enums-example.yaml  inlining-union-example.yaml  instantiates-example.yaml  path-example.yaml  pattern-example.yaml  pointer-example.yaml  relational-roles-example.yaml  rules-example.yaml  slot-group-example.yaml  structured_alias.yaml  unique-key-example.yaml  unit-example.yaml
graphql/: annotations.graphql  extensions.graphql
json/: annotations.json  extensions.json  mappings.json  meta.json  types.json
jsonld/: README.md  annotations.context.jsonld  annotations.model.context.jsonld  context.jsonld  extensions.context.jsonld  extensions.model.context.jsonld  mappings.context.jsonld  mappings.model.context.jsonld  meta.context.jsonld  meta.model.context.jsonld  types.context.jsonld  types.model.context.jsonld
jsonschema/: meta.schema.json
linkml_model/: __init__.py  annotations.py  array.py  datasets.py  extensions.py  linkml_files.py  mappings.py  meta.py  types.py  units.py  validation.py
model/: import_map.json
owl/: meta.owl.ttl
python/: annotations.py  extensions.py  mappings.py  meta.py  types.py
shex/: annotations.shex  annotations.shexj  extensions.shex  extensions.shexj  mappings.shex  mappings.shexj  meta.shex  meta.shexj  types.shex  types.shexj
specification/: 00preamble.md  01introduction.md  02instances.md  03schemas.md  04derived-schemas.md  05validation.md  06mapping.md  index.md
tests/: __init__.py  test_ifabsent.py  test_input_against_model.py  test_linkml_files.py
utils/: get-value.sh
(+1436 files in other folders)
