[project]
name = "linkml-model"
version = "0.0.0"
description = "Metamodel schema, documentation, and specification for the Linked Open Data Modeling Language (LinkML)"
license = "MIT"
authors = [
    {name = "Chris Mungall", email = "cjmungall@lbl.gov"}
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["linked data", "linkml", "metamodel"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    "linkml-runtime>=1.6.3,<2.0.0",
]

[project.urls]
Homepage = "https://linkml.io/"
Repository = "https://github.com/linkml/linkml-model/"
Documentation = "https://linkml.io/linkml-model/docs/"

[dependency-groups]
dev = [
    "linkml>=1.6.11,<2.0.0",
    "codespell>=2.2.5",
    "yamllint>=1.32.0",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=0.6.0",
    "mike @ git+https://github.com/jimporter/mike.git@be1aafe",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linkml_model"]

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.min.*,*.json,*.ttl,*.html,*.jsonld'
# Ignore table where words could be split across rows, also within HTML for ..</td>
# Ignore shortcut specifications like [Ff]alse
# Ignore escaped characters like \n etc
# ignore-regex = '(\|.*\|.*\|.*\||[a-z]*\.\.\.</td>|\[[A-Z][a-z]\][a-z][a-z]|\\[fnrstv])'
# ND,LOD - names/keywords
# ans - variable in JS
# egal - Harmony egal.
ignore-words-list = 'nd,lod,ans,egal,alse,linke'
