[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "linkml-model"
dynamic = ["version"]
description = "Metamodel schema, documentation, and specification for the Linked Open Data Modeling Language (LinkML)"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "Chris Mungall", email = "cjmungall@lbl.gov"},
]
keywords = ["linked data", "linkml", "metamodel"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "linkml-runtime>=1.6.3,<2",
]

[project.urls]
Homepage = "https://linkml.io/"
Repository = "https://github.com/linkml/linkml-model/"
Documentation = "https://linkml.io/linkml-model/docs/"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["linkml_model"]

[dependency-groups]
dev = [
    "linkml>=1.10.0rc5",
    "codespell>=2.2.5",
    "yamllint>=1.32.0",
    "pytest>=7.0",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=0.6.0",
    "mike>=2.0.0",
]

[tool.tox]
requires = ["tox>=4", "tox-uv"]
env_list = ["py{310,313}"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
commands = [
    ["pytest", "{posargs:tests}"],
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.min.*,*.json,*.ttl,*.html,*.jsonld'
# Ignore table where words could be split across rows, also within HTML for ..</td>
# Ignore shortcut specifications like [Ff]alse
# Ignore escaped characters like \n etc
# ignore-regex = '(\|.*\|.*\|.*\||[a-z]*\.\.\.</td>|\[[A-Z][a-z]\][a-z][a-z]|\\[fnrstv])'
# ND,LOD - names/keywords
# ans - variable in JS
# egal - Harmony egal.
ignore-words-list = 'nd,lod,ans,egal,alse,linke'
