[metadata]
name = linkml_model
url = https://github.com/linkml/linkml-model
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = Link Modeling Language Meta Model
home-page = https://linkml.github.io/linkml-model
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    linkml
    LOD
    Modeling
    Linked open data
    model

[files]
packages =
    linkml_model
